--- a/_MainMaven/pom.xml
+++ b/_MainMaven/pom.xml
@@ -34,7 +34,7 @@
         <dependency>
             <groupId>com.shinemo</groupId>
             <artifactId>common-client</artifactId>
-            <version>1.3.11-SNAPSHOT</version>
+            <version>1.3.29-SNAPSHOT</version>
         </dependency>
         <dependency>
             <groupId>com.github.stuxuhai</groupId>
@@ -45,6 +45,11 @@
             <groupId>javax.servlet</groupId>
             <artifactId>javax.servlet-api</artifactId>
             <version>4.0.0</version>
+        </dependency>
+        <dependency>
+            <groupId>cglib</groupId>
+            <artifactId>cglib</artifactId>
+            <version>3.2.4</version>
         </dependency>
     </dependencies>
 
