--- a/_MainMaven/pom.xml
+++ b/_MainMaven/pom.xml
@@ -34,7 +34,7 @@
         <dependency>
             <groupId>com.shinemo</groupId>
             <artifactId>common-client</artifactId>
-            <version>1.3.33</version>
+            <version>1.3.39-SNAPSHOT</version>
         </dependency>
         <dependency>
             <groupId>com.github.stuxuhai</groupId>
