--- a/_MainMaven/pom.xml
+++ b/_MainMaven/pom.xml
@@ -27,6 +27,21 @@
             <version>2.9.8</version>
         </dependency>
         <dependency>
+            <groupId>com.fasterxml.jackson.core</groupId>
+            <artifactId>jackson-core</artifactId>
+            <version>2.9.8</version>
+        </dependency>
+        <dependency>
+            <groupId>com.fasterxml.jackson.core</groupId>
+            <artifactId>jackson-annotations</artifactId>
+            <version>2.9.8</version>
+        </dependency>
+        <dependency>
+            <groupId>com.fasterxml.jackson.datatype</groupId>
+            <artifactId>jackson-datatype-jsr310</artifactId>
+            <version>2.9.8</version>
+        </dependency>
+        <dependency>
             <groupId>commons-lang</groupId>
             <artifactId>commons-lang</artifactId>
             <version>2.6</version>
@@ -34,7 +49,7 @@
         <dependency>
             <groupId>com.shinemo</groupId>
             <artifactId>common-client</artifactId>
-            <version>1.3.39-SNAPSHOT</version>
+            <version>1.3.50-SNAPSHOT</version>
         </dependency>
         <dependency>
             <groupId>com.github.stuxuhai</groupId>
