--- a/_MainMaven/pom.xml
+++ b/_MainMaven/pom.xml
@@ -5,7 +5,7 @@
     <modelVersion>4.0.0</modelVersion>
 
     <groupId>com.htdong</groupId>
-    <artifactId>test</artifactId>
+    <artifactId>mainMaven</artifactId>
     <version>1.0.0</version>
 
     <packaging>jar</packaging>
