--- a/_MainMaven/pom.xml
+++ b/_MainMaven/pom.xml
@@ -12,6 +12,7 @@
     <name>_mainMaven</name>
 
     <properties>
+        <jackson-version>2.9.9.2</jackson-version>
         <project-encoding>UTF-8</project-encoding>
     </properties>
 
@@ -24,22 +25,22 @@
         <dependency>
             <groupId>com.fasterxml.jackson.core</groupId>
             <artifactId>jackson-databind</artifactId>
-            <version>2.9.9</version>
+            <version>${jackson-version}</version>
         </dependency>
         <dependency>
             <groupId>com.fasterxml.jackson.core</groupId>
             <artifactId>jackson-core</artifactId>
-            <version>2.9.9</version>
+            <version>${jackson-version}</version>
         </dependency>
         <dependency>
             <groupId>com.fasterxml.jackson.core</groupId>
             <artifactId>jackson-annotations</artifactId>
-            <version>2.9.9</version>
+            <version>${jackson-version}</version>
         </dependency>
         <dependency>
             <groupId>com.fasterxml.jackson.datatype</groupId>
             <artifactId>jackson-datatype-jsr310</artifactId>
-            <version>2.9.9</version>
+            <version>${jackson-version}</version>
         </dependency>
         <dependency>
             <groupId>commons-lang</groupId>
