--- a/_MainMaven/pom.xml
+++ b/_MainMaven/pom.xml
@@ -50,7 +50,7 @@
         <dependency>
             <groupId>com.shinemo</groupId>
             <artifactId>common-client</artifactId>
-            <version>1.3.56-SNAPSHOT</version>
+            <version>1.3.55</version>
         </dependency>
         <dependency>
             <groupId>com.github.stuxuhai</groupId>
