--- a/_MainMaven/pom.xml
+++ b/_MainMaven/pom.xml
@@ -68,9 +68,15 @@
             <version>3.2.4</version>
         </dependency>
         <dependency>
-            <groupId>com.github.junrar</groupId>
-            <artifactId>junrar</artifactId>
-            <version>4.0.0</version>
+            <groupId>org.codehaus.groovy</groupId>
+            <artifactId>groovy</artifactId>
+            <version>3.0.1</version>
+        </dependency>
+        <dependency>
+            <groupId>org.codehaus.groovy</groupId>
+            <artifactId>groovy-jsr223</artifactId>
+            <version>3.0.1</version>
+            <scope>runtime</scope>
         </dependency>
     </dependencies>
 
