--- a/_MainMaven/pom.xml
+++ b/_MainMaven/pom.xml
@@ -43,6 +43,11 @@
             <version>${jackson-version}</version>
         </dependency>
         <dependency>
+            <groupId>com.alibaba</groupId>
+            <artifactId>fastjson</artifactId>
+            <version>1.2.75</version>
+        </dependency>
+        <dependency>
             <groupId>commons-lang</groupId>
             <artifactId>commons-lang</artifactId>
             <version>2.6</version>
