--- a/_MainMaven/pom.xml
+++ b/_MainMaven/pom.xml
@@ -13,6 +13,7 @@
 
     <properties>
         <jackson-version>2.10.0</jackson-version>
+        <groovy-version>3.0.1</groovy-version>
         <project-encoding>UTF-8</project-encoding>
     </properties>
 
@@ -75,12 +76,12 @@
         <dependency>
             <groupId>org.codehaus.groovy</groupId>
             <artifactId>groovy</artifactId>
-            <version>3.0.1</version>
+            <version>${groovy-version}</version>
         </dependency>
         <dependency>
             <groupId>org.codehaus.groovy</groupId>
             <artifactId>groovy-jsr223</artifactId>
-            <version>3.0.1</version>
+            <version>${groovy-version}</version>
             <scope>runtime</scope>
         </dependency>
         <dependency>
