--- a/_MainMaven/pom.xml
+++ b/_MainMaven/pom.xml
@@ -57,6 +57,12 @@
             <groupId>com.shinemo</groupId>
             <artifactId>common-client</artifactId>
             <version>1.4.2-SNAPSHOT</version>
+            <exclusions>
+                <exclusion>
+                    <groupId>*</groupId>
+                    <artifactId>*</artifactId>
+                </exclusion>
+            </exclusions>
         </dependency>
         <dependency>
             <groupId>com.github.stuxuhai</groupId>
@@ -118,7 +124,7 @@
         <dependency>
             <groupId>io.netty</groupId>
             <artifactId>netty-all</artifactId>
-            <version>4.1.42</version>
+            <version>4.1.42.Final</version>
         </dependency>
         <dependency>
             <groupId>com.shinemo</groupId>
@@ -153,13 +159,6 @@
                 <groupId>org.apache.maven.plugins</groupId>
                 <artifactId>maven-resources-plugin</artifactId>
                 <version>2.6</version>
-            </plugin>
-            <plugin>
-                <groupId>org.apache.maven.plugins</groupId>
-                <artifactId>maven-surefire-plugin</artifactId>
-                <configuration>
-                    <skip>true</skip>
-                </configuration>
             </plugin>
         </plugins>
     </build>
