--- a/_MainMaven/pom.xml
+++ b/_MainMaven/pom.xml
@@ -19,6 +19,11 @@
 
     <dependencies>
         <dependency>
+            <groupId>com.shinemo.jce</groupId>
+            <artifactId>jce</artifactId>
+            <version>5.1.5-SNAPSHOT</version>
+        </dependency>
+        <dependency>
             <groupId>org.projectlombok</groupId>
             <artifactId>lombok</artifactId>
             <version>1.16.18</version>
