--- a/.gitignore
+++ b/.gitignore
@@ -236,3 +236,4 @@ local.properties
 .recommenders/
 
 ###################################### Eclipse End ######################################
+/Debug/
