--- a/_MainMaven/pom.xml
+++ b/_MainMaven/pom.xml
@@ -102,7 +102,7 @@
         <dependency>
             <groupId>mysql</groupId>
             <artifactId>mysql-connector-java</artifactId>
-            <version>8.0.16</version>
+            <version>8.0.28</version>
         </dependency>
         <dependency>
             <groupId>com.alibaba</groupId>
@@ -122,7 +122,13 @@
         <dependency>
             <groupId>com.shinemo.aace</groupId>
             <artifactId>aace</artifactId>
-            <version>4.0.8-SNAPSHOT</version>
+            <version>4.1.0-SNAPSHOT</version>
+        </dependency>
+        <dependency>
+            <groupId>org.slf4j</groupId>
+            <artifactId>slf4j-api</artifactId>
+            <version>1.7.9</version>
+            <scope>compile</scope>
         </dependency>
     </dependencies>
 
